<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_web_client_id" translatable="false">NULL</string>

    <string name="sign_in_error">Sign In Error!</string>
    <string name="registration_error">Registration Error!</string>
    <string name="sign_in_email">Sign In</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="password_again">Password Again</string>
    <string name="passwords_dont_match">Passwords Don\'t Match!</string>
    <string name="not_all_fields">Not all fields are filled in!</string>

    <string name="or_continue_with">Or continue with</string>
    <string name="do_not_have_an_account">Don’t have account?</string>
    <string name="create_now"><u>Create now</u></string>
    <string name="not_now"><u>Not now</u></string>

    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>